[gd_scene load_steps=3 format=3 uid="uid://bbdmsiy2xbtbh"]

[ext_resource type="Script" path="res://addons/resource_remaps/resource_remap_options.gd" id="1_akfbc"]
[ext_resource type="Script" path="res://addons/resource_remaps/resource_remap.gd" id="1_owwd1"]

[node name="Resource Remaps" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_owwd1")
metadata/Notes = "This control is basically a copy of LocalizationEditor::LocalizationEditor()"

[node name="thb" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="l" type="Label" parent="thb"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Resources:"

[node name="spacer" type="Control" parent="thb"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="res_remap_add_button" type="Button" parent="thb"]
unique_name_in_owner = true
layout_mode = 2
text = "Add..."

[node name="tmc" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="resource_remap" type="Tree" parent="tmc"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
hide_root = true

[node name="thb2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="l" type="Label" parent="thb2"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Remaps by Feature:"

[node name="spacer" type="Control" parent="thb2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="res_remap_option_add_button" type="Button" parent="thb2"]
unique_name_in_owner = true
layout_mode = 2
text = "Add..."

[node name="tmc2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="resource_remap_options" type="Tree" parent="tmc2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_root = true
script = ExtResource("1_akfbc")
