@tool
class_name ResourceRemapControl extends Control

@onready var resource_remap: Tree = %resource_remap
@onready var res_remap_add_button: Button = %res_remap_add_button
@onready var resource_remap_options: Tree = %resource_remap_options
@onready var res_remap_option_add_button: Button = %res_remap_option_add_button
